<resources>
    <string name="app_name">Green Repack</string>
    <string name="projet_description">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="projet_titre">Association 1000 Espoir</string>
    <string name="projet_caracteristique">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="projet_sous_titre">Objectif du projet:</string>

    <string name="apiUrl"></string>

    <string name="login">Se connecter</string>
    <string name="forget_paswword">Mot de passe oublié ?</string>
    <string name="sign_in">Inscription (association)</string>

    <string name="form_login_email">Email</string>
    <string name="form_login_password">Mot de passe</string>
    <string name="form_login_error_missing_field">Veuillez saisir votre email et mot de passe pour vous connecter</string>

    <string name="action_login">Connexion</string>
    <string name="action_logout">Déconnexion</string>
    <string name="action_forget_paswword">Mot de passe oublié ?</string>
    <string name="action_login_assoc">Se connecter en tant qu\'association</string>
    <string name="action_signin">Inscrire une association</string>

    <string name="register_nom">Nom de l\'association</string>
    <string name="register_rna">N° RNA</string>
    <string name="register_logo">Uploader un logo</string>
    <string name="register_association">Enregistrer une association</string>
    <string name="register_button">S\'inscrire</string>

    <string name="projets_en_cours">Projets en cours</string>
    <string name="projets_termines">Projets terminés</string>
    <string name="projet_ajout_succes">Votre projet à bien été ajouté, les utilisateurs pouront effectuer des dons dès qu\'il aura été validé par nos équipes.</string>
    <string name="projet_ajout_bouton">Créer un nouveau projet</string>
    <string name="montant_demande">Montant demandé</string>
    <string name="nouveau_projet">Nouveau Projet</string>
    <string name="creer_un_projet">Créer un projet</string>
    <string name="date_fin">Date fin</string>
    <string name="date_debut">Date début</string>
    <string name="description">Description...</string>
    <string name="libelle">Libellé</string>
    <string name="retour">Retour</string>
    <string name="logout">Se déconnecter</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="remaining_coins">Vous possédez actuellement %1$d Green Coins</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>