<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".associations.CreateProjectActivity">

    <EditText
        android:id="@+id/projet_libelle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/libelle"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:id="@+id/input_projet_description"
        android:layout_width="383dp"
        android:layout_height="144dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_projet_montant" />

    <EditText
        android:id="@+id/input_projet_date_debut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:ems="6"
        android:hint="@string/date_debut"
        android:inputType="date"
        android:minHeight="48dp"
        android:onClick="showTimePickerDialog"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="@+id/projet_libelle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projet_libelle" />

    <EditText
        android:id="@+id/input_projet_date_fin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:ems="6"
        android:hint="@string/date_fin"
        android:inputType="date"
        android:minHeight="48dp"
        android:onClick="showTimePickerDialog"
        android:focusableInTouchMode="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toEndOf="@+id/input_projet_date_debut"
        app:layout_constraintTop_toTopOf="@+id/input_projet_date_debut" />

    <Button
        android:id="@+id/btn_create_project"
        android:layout_width="229dp"
        android:layout_height="48dp"
        android:layout_marginTop="44dp"
        android:text="@string/creer_un_projet"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/input_projet_description"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/input_projet_description"
        app:layout_constraintTop_toBottomOf="@+id/input_projet_description" />

    <ImageView
        android:id="@+id/association_logo_create"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/projet_libelle"
        app:layout_constraintStart_toEndOf="@+id/projet_libelle"
        app:srcCompat="@drawable/ic_launcher_background" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="187dp"
        android:layout_height="36dp"
        android:layout_marginTop="40dp"
        android:text="@string/nouveau_projet"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.071"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_projet_montant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:ems="10"
        android:hint="@string/montant_demande"
        android:inputType="number"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_projet_date_debut" />
</androidx.constraintlayout.widget.ConstraintLayout>