<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProjectDetailActivity">

    <Button
        android:id="@+id/btn_new_project"
        android:layout_width="248dp"
        android:layout_height="65dp"
        android:layout_marginTop="584dp"
        android:background="@color/green_button"
        android:text="@string/projet_ajout_bouton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/association_logo"
        android:layout_width="137dp"
        android:layout_height="114dp"
        android:layout_marginStart="260dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projet_nom"
        app:srcCompat="@drawable/ponttillionville" />

    <TextView
        android:id="@+id/projet_nom"
        android:layout_width="265dp"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/projet_titre"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.087"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_projets_en_cours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:text="@string/projets_en_cours"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/projet_nom" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_projet_en_cours"
        android:layout_width="390dp"
        android:layout_height="134dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="12dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_projets_en_cours"
        app:layout_constraintVertical_bias="0.017"
        tools:itemCount="4"
        tools:listitem="@layout/project_label_row">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tv_projets_termines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/projets_termines"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.041"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_projet_en_cours" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_projets_termines"
        android:layout_width="386dp"
        android:layout_height="134dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_projets_termines"
        tools:itemCount="4"
        tools:listitem="@layout/project_label_row" />

    <Button
        android:id="@+id/btn_association_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/green_button"
        android:text="@string/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.952"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>